<resources>
    <string name="app_name">QuiteRead</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splash_title_01">只</string>
    <string name="splash_title_02">想</string>
    <string name="splash_title_03">安</string>
    <string name="splash_title_04">静</string>
    <string name="splash_title_05">地</string>
    <string name="splash_title_06">读</string>
    <string name="splash_title_07">书</string>
    <string name="chinese_space">&#160;&#160;&#160;&#160;</string>
    <string name="splash_title_10">Version 1.0 by Clily Studio.</string>

</resources>
